--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2157,7 +2157,7 @@ input, select, textarea {
 						position: absolute;
 						left: 0;
 						color: #41484c;
-						text-align: center;
+						text-align: left;
 						width: 1.25em;
 						line-height: 1.75em;
 					}
@@ -2213,7 +2213,7 @@ input, select, textarea {
 			overflow: hidden;
 			padding: 4em 0;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
-			text-align: center;
+			text-align: left;
 			background-image: url("images/overlay.png");
 		}
 
@@ -2513,7 +2513,7 @@ input, select, textarea {
 						font-size: 18px;
 						background: rgba(128, 136, 144, 0.5);
 						border-radius: 0.35em;
-						text-align: center;
+						text-align: left;
 						position: absolute;
 						left: 0.5em;
 						top: 0.5em;
