--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2513,7 +2513,7 @@ input, select, textarea {
 						font-size: 18px;
 						background: rgba(128, 136, 144, 0.5);
 						border-radius: 0.35em;
-						text-align: center;
+						text-align: left;
 						position: absolute;
 						left: 0.5em;
 						top: 0.5em;
