--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2176,7 +2176,7 @@ input, select, textarea {
 
 	#footer {
 		margin-left: 375px;
-		text-align: left;
+		text-align: center;
 		background-color: #dce3e2;
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
