--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1829,7 +1829,7 @@ input, select, textarea {
 			width: 2em;
 			height: 2em;
 			line-height: 2em;
-			text-align: left;
+			text-align: center;
 			border: 0;
 		}
 
